--- a/registro-usuarios/pom.xml
+++ b/registro-usuarios/pom.xml
@@ -63,6 +63,11 @@
 		    <version>2.8.0</version>
 		</dependency>
 		<dependency>
+		    <groupId>commons-net</groupId>
+		    <artifactId>commons-net</artifactId>
+		    <version>3.8.0</version> <!-- Verifica la última versión disponible -->
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
